# speech

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
cmd/gateway/: main.go
deploy/helm/asr-gateway/: Chart.yaml  values.yaml
deploy/helm/asr-inference/: .helmignore  Chart.yaml  values.yaml
deploy/helm/keda/: Chart.yaml  README.md  values.yaml
inference-server/: Dockerfile  README.md  gen_proto.sh  requirements.txt  server.py  service.py  test_service.py
internal/config/: config.go
internal/genproto/asr/: asr.pb.go  asr_grpc.pb.go
internal/inference/: client.go  client_test.go
internal/inference/mock/: server.go
internal/metrics/: metrics.go
internal/session/: manager.go  session.go  session_test.go  types.go
internal/transport/: protocol.go  protocol_test.go  transport.go
sdks/: README.md
sdks/go/: README.md  asr.go  asr_test.go
sdks/go/example/: main.go
sdks/js/: README.md  example.mjs  package.json  tsconfig.json
sdks/js/src/: index.ts
sdks/python/: README.md  example.py  pyproject.toml
sdks/python/asr_client/: __init__.py
specs/001-websocket-asr-streaming/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-websocket-asr-streaming/checklists/: requirements.md
specs/001-websocket-asr-streaming/contracts/: asr.proto  websocket-protocol.md
test/integration/: roundtrip_test.go
(+20 files in other folders)
