[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-client"
version = "0.1.0"
description = "Async Python client SDK for the ASR streaming gateway (asr.v1)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "harshithgowdakt" }]
dependencies = ["websockets>=12.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["asr_client*"]
